--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
     </head>
 
     <body>
