--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMEdvT-Ke18WbbyAOfpSgv1ZWR2-jrV0KSXQ&usqp=CAU" alt="A book">
+                            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$19.99</h2>
-                            <p class="product__description">A very interesting book</p>
+                            <h2 class="product__price">$<%= product.price %></h2>
+                            <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
                             <button class="btn">Add to Cart</button>
