--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -14,7 +14,8 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                            <img src="<%= product.imageUrl %>"
+                                alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
@@ -24,7 +25,7 @@
                             <button class="btn">Add to Cart</button>
                         </div>
                     </article>
-                <% } %>    
+                <% } %>
             </div>
         <% } else { %>
             <h1>No Products Found!</h1>
